test/files/run/splain.check
newSource1.scala:13: error: no implicit for value e; chains: g, i1, i1, g, i1, i1
  implicitly[II]
            ^
